--- a/index.qmd
+++ b/index.qmd
@@ -1,64 +1,64 @@
 ---
 title: "Homework 4"
-author: "[Insert your name here]{style='background-color: yellow;'}"
+author: "[Advait Ashtikar]{style='background-color: yellow;'}"
 toc: true
 title-block-banner: true
 title-block-style: default
 format: html
 # format: pdf
+editor: 
+  markdown: 
+    wrap: 72
 ---
 
 [Link to the Github repository](https://github.com/psu-stat380/hw-4)
 
----
+------------------------------------------------------------------------
 
 ::: {.callout-important style="font-size: 0.8em;"}
-## Due: Sun, Apr 2, 2023 @ 11:59pm
+## Due: Sun, Apr 2, 2023 \@ 11:59pm
 
-Please read the instructions carefully before submitting your assignment.
+Please read the instructions carefully before submitting your
+assignment.
 
-1. This assignment requires you to only upload a `PDF` file on Canvas
-1. Don't collapse any code cells before submitting. 
-1. Remember to make sure all your code output is rendered properly before uploading your submission.
+1.  This assignment requires you to only upload a `PDF` file on Canvas
+2.  Don't collapse any code cells before submitting.
+3.  Remember to make sure all your code output is rendered properly
+    before uploading your submission.
 
-⚠️ Please add your name to the author information in the frontmatter before submitting your assignment ⚠️
+⚠️ Please add your name to the author information in the frontmatter
+before submitting your assignment ⚠️
 :::
-
 
 We will be using the following libraries:
 
-```R
-packages <- c(
-  "dplyr", 
-  "readr", 
-  "tidyr", 
-  "purrr", 
-  "stringr", 
-  "corrplot", 
-  "car", 
-  "caret", 
-  "torch", 
-  "nnet", 
-  "broom"
-)
-
-# renv::install(packages)
-sapply(packages, require, character.only=T)
+```{r}
+library(dplyr)
+library(readr)
+library(tidyr)
+library(purrr)
+library(stringr)
+library(corrplot)
+library(car)
+library(caret)
+library(torch)
+library(nnet)
+library(broom)
 ```
 
-<br><br><br><br>
----
+## <br><br><br><br>
 
 ## Question 1
-::: {.callout-tip}
+
+::: callout-tip
 ## 30 points
+
 Automatic differentiation using `torch`
 :::
 
 ###### 1.1 (5 points)
 
-Consider $g(x, y)$ given by
-$$
+Consider $g(x, y)$ given by $$
 g(x, y) = (x - 3)^2 + (y - 4)^2.
 $$
 
@@ -68,25 +68,24 @@ $$
 \frac{d}{dx}g(x, y), \quad \text{and} \quad \frac{d}{dy}g(x, y).
 $$
 
-Using your answer from above, what is the answer to
-$$
+Using your answer from above, what is the answer to $$
 \frac{d}{dx}g(x, y) \Bigg|_{(x=3, y=4)} \quad \text{and} \quad \frac{d}{dy}g(x, y) \Bigg|_{(x=3, y=4)} ?
 $$
 
-Define $g(x, y)$ as a function in R, compute the gradient of $g(x, y)$ with respect to $x=3$ and $y=4$. Does the answer match what you expected?
+Define $g(x, y)$ as a function in R, compute the gradient of $g(x, y)$
+with respect to $x=3$ and $y=4$. Does the answer match what you
+expected?
 
----
+------------------------------------------------------------------------
 
 ###### 1.2 (10 points)
 
-
 $$\newcommand{\u}{\boldsymbol{u}}\newcommand{\v}{\boldsymbol{v}}$$
 
-Consider $h(\u, \v)$ given by
-$$
+Consider $h(\u, \v)$ given by $$
 h(\u, \v) = (\u \cdot \v)^3,
-$$
-where $\u \cdot \v$ denotes the dot product of two vectors, i.e., $\u \cdot \v = \sum_{i=1}^n u_i v_i.$
+$$ where $\u \cdot \v$ denotes the dot product of two vectors, i.e.,
+$\u \cdot \v = \sum_{i=1}^n u_i v_i.$
 
 Using elementary calculus derive the expressions for the gradients
 
@@ -96,7 +95,8 @@ $$
 \end{aligned}
 $$
 
-Using your answer from above, what is the answer to $\nabla_\u h(\u, \v)$ when $n=10$ and
+Using your answer from above, what is the answer to
+$\nabla_\u h(\u, \v)$ when $n=10$ and
 
 $$
 \begin{aligned}
@@ -105,139 +105,143 @@ $$
 \end{aligned}
 $$
 
-Define $h(\u, \v)$ as a function in R, initialize the two vectors $\u$ and $\v$ as `torch_tensor`s. Compute the gradient of $h(\u, \v)$ with respect to $\u$. Does the answer match what you expected?
+Define $h(\u, \v)$ as a function in R, initialize the two vectors $\u$
+and $\v$ as `torch_tensor`s. Compute the gradient of $h(\u, \v)$ with
+respect to $\u$. Does the answer match what you expected?
 
----
+------------------------------------------------------------------------
 
 ###### 1.3 (5 points)
 
-Consider the following function
-$$
+Consider the following function $$
 f(z) = z^4 - 6z^2 - 3z + 4
 $$
 
-Derive the expression for 
-$$
+Derive the expression for $$
 f'(z_0) = \frac{df}{dz}\Bigg|_{z=z_0}
-$$
-and evaluate $f'(z_0)$ when $z_0 = -3.5$.
+$$ and evaluate $f'(z_0)$ when $z_0 = -3.5$.
 
-Define $f(z)$ as a function in R, and using the `torch` library compute $f'(-3.5)$. 
+Define $f(z)$ as a function in R, and using the `torch` library compute
+$f'(-3.5)$.
 
-
----
+------------------------------------------------------------------------
 
 ###### 1.4 (5 points)
 
-For the same function $f$, initialize $z[1] = -3.5$, and perform $n=100$ iterations of **gradient descent**, i.e., 
+For the same function $f$, initialize $z[1] = -3.5$, and perform $n=100$
+iterations of **gradient descent**, i.e.,
 
-> $z[{k+1}] = z[k] - \eta f'(z[k]) \ \ \ \ $ for $k = 1, 2, \dots, 100$
+> $z[{k+1}] = z[k] - \eta f'(z[k]) \ \ \ \$ for $k = 1, 2, \dots, 100$
 
-Plot the curve $f$ and add taking $\eta = 0.02$, add the points $\{z_0, z_1, z_2, \dots z_{100}\}$ obtained using gradient descent to the plot. What do you observe?
+Plot the curve $f$ and add taking $\eta = 0.02$, add the points
+$\{z_0, z_1, z_2, \dots z_{100}\}$ obtained using gradient descent to
+the plot. What do you observe?
 
----
+------------------------------------------------------------------------
 
 ###### 1.5 (5 points)
 
+Redo the same analysis as **Question 1.4**, but this time using
+$\eta = 0.03$. What do you observe? What can you conclude from this
+analysis
 
-Redo the same analysis as **Question 1.4**, but this time using $\eta = 0.03$. What do you observe? What can you conclude from this analysis
-
-
-
-
-<br><br><br><br>
-<br><br><br><br>
----
+<br><br><br><br> <br><br><br><br> ---
 
 ## Question 2
-::: {.callout-tip}
+
+::: callout-tip
 ## 50 points
+
 Logistic regression and interpretation of effect sizes
 :::
 
-For this question we will use the **Titanic** dataset from the Stanford data archive. This dataset contains information about passengers aboard the Titanic and whether or not they survived. 
+For this question we will use the **Titanic** dataset from the Stanford
+data archive. This dataset contains information about passengers aboard
+the Titanic and whether or not they survived.
 
-
----
+------------------------------------------------------------------------
 
 ###### 2.1 (5 points)
 
-Read the data from the following URL as a tibble in R. Preprocess the data such that the variables are of the right data type, e.g., binary variables are encoded as factors, and convert all column names to lower case for consistency. Let's also rename the response variable `Survival` to `y` for convenience.
+Read the data from the following URL as a tibble in R. Preprocess the
+data such that the variables are of the right data type, e.g., binary
+variables are encoded as factors, and convert all column names to lower
+case for consistency. Let's also rename the response variable `Survival`
+to `y` for convenience.
 
-```R
+```{r}
 url <- "https://web.stanford.edu/class/archive/cs/cs109/cs109.1166/stuff/titanic.csv"
 
 df <- ... # Insert your code here
 ```
 
----
+------------------------------------------------------------------------
 
 ###### 2.2 (5 points)
 
-Visualize the correlation matrix of all numeric columns in `df` using `corrplot()`
+Visualize the correlation matrix of all numeric columns in `df` using
+`corrplot()`
 
-```R
+```{r}
 df %>% ... # Insert your code here
 ```
 
-
-
----
+------------------------------------------------------------------------
 
 ###### 2.3 (10 points)
 
-Fit a logistic regression model to predict the probability of surviving the titanic as a function of:
+Fit a logistic regression model to predict the probability of surviving
+the titanic as a function of:
 
-* `pclass`
-* `sex`
-* `age`
-* `fare`
-* `# siblings`
-* `# parents`
+-   `pclass`
+-   `sex`
+-   `age`
+-   `fare`
+-   `# siblings`
+-   `# parents`
 
-
-```R
+```{r}
 full_model <- ... # Insert your code here
 summary(full_model)
 ```
 
----
+------------------------------------------------------------------------
 
 ###### 2.4 (30 points)
 
-Provide an interpretation for the slope and intercept terms estimated in `full_model` in terms of the log-odds of survival in the titanic and in terms of the odds-ratio (if the covariate is also categorical).
+Provide an interpretation for the slope and intercept terms estimated in
+`full_model` in terms of the log-odds of survival in the titanic and in
+terms of the odds-ratio (if the covariate is also categorical).
 
-::: {.callout-hint}
-## 
-Recall the definition of logistic regression from the lecture notes, and also recall how we interpreted the slope in the linear regression model (particularly when the covariate was categorical).
+::: callout-hint
+Recall the definition of logistic regression from the lecture notes, and
+also recall how we interpreted the slope in the linear regression model
+(particularly when the covariate was categorical).
 :::
 
-
-<br><br><br><br>
-<br><br><br><br>
----
+<br><br><br><br> <br><br><br><br> ---
 
 ## Question 3
-::: {.callout-tip}
+
+::: callout-tip
 ## 70 points
 
 Variable selection and logistic regression in `torch`
-
 :::
 
-
----
+------------------------------------------------------------------------
 
 ###### 3.1 (15 points)
 
-Complete the following function `overview` which takes in two categorical vectors (`predicted` and `expected`) and outputs:
+Complete the following function `overview` which takes in two
+categorical vectors (`predicted` and `expected`) and outputs:
 
-* The prediction accuracy
-* The prediction error
-* The false positive rate, and
-* The false negative rate
+-   The prediction accuracy
+-   The prediction error
+-   The false positive rate, and
+-   The false negative rate
 
-```R
+```{r}
 overview <- function(predicted, expected){
     accuracy <- ... # Insert your code here
     error <- ... # Insert your code here
@@ -258,53 +262,59 @@ overview <- function(predicted, expected){
 }
 ```
 
-You can check if your function is doing what it's supposed to do by evaluating
+You can check if your function is doing what it's supposed to do by
+evaluating
 
-```R
+```{r}
 overview(df$y, df$y)
 ```
+
 and making sure that the accuracy is $100\%$ while the errors are $0\%$.
----
 
 ###### 3.2 (5 points)
 
 Display an overview of the key performance metrics of `full_model`
 
-```R
+```{r}
 ... # Insert your code here
 ```
 
----
+------------------------------------------------------------------------
 
-###### 3.3  (5 points)
+###### 3.3 (5 points)
 
-Using backward-stepwise logistic regression, find a parsimonious altenative to `full_model`, and print its `overview`
+Using backward-stepwise logistic regression, find a parsimonious
+altenative to `full_model`, and print its `overview`
 
-```R
+```{r}
 step_model <- ... # Insert your code here. 
 summary(step_model)
 ```
 
-```R
+```{r}
 step_predictions <- ... # Insert your code here
 overview(step_predictions, df$y)
 ```
 
----
+------------------------------------------------------------------------
 
-###### 3.4  (15 points)
+###### 3.4 (15 points)
 
-Using the `caret` package, setup a **$5$-fold cross-validation** training method using the `caret::trainConrol()` function
+Using the `caret` package, setup a $5$-fold cross-validation training
+method using the `caret::trainConrol()` function
 
-```R
+```{r}
 controls <- trainControl() # ... insert your code here
 ```
 
-Now, using `control`, perform $5$-fold cross validation using `caret::train()` to select the optimal $\lambda$ parameter for LASSO with logistic regression. 
+Now, using `control`, perform $5$-fold cross validation using
+`caret::train()` to select the optimal $\lambda$ parameter for LASSO
+with logistic regression.
 
-Take the search grid for $\lambda$ to be in $\{ 2^{-20}, 2^{-19.5}, 2^{-19}, \dots, 2^{-0.5}, 2^{0} \}$.
+Take the search grid for $\lambda$ to be in
+$\{ 2^{-20}, 2^{-19.5}, 2^{-19}, \dots, 2^{-0.5}, 2^{0} \}$.
 
-```R
+```{r}
 # Insert your code in the ... region
 lasso_fit <- train(
   x = ...,
@@ -318,28 +328,35 @@ lasso_fit <- train(
   family = ...
 )
 ```
-Using the information stored in `lasso_fit$results`, plot the results for  cross-validation accuracy vs. $log_2(\lambda)$. Choose the optimal $\lambda^*$, and report your results for this value of $\lambda^*$.
 
----
+Using the information stored in `lasso_fit$results`, plot the results
+for cross-validation accuracy vs. $log_2(\lambda)$. Choose the optimal
+$\lambda^*$, and report your results for this value of $\lambda^*$.
 
-###### 3.5  (25 points)
+------------------------------------------------------------------------
 
-First, use the `model.matrix()` function to convert the covariates of `df` to a matrix format
+###### 3.5 (25 points)
 
-```R
+First, use the `model.matrix()` function to convert the covariates of
+`df` to a matrix format
+
+```{r}
 covariate_matrix <- model.matrix(full_model)[, -1]
 ```
 
-Now, initialize the covariates $X$ and the response $y$ as `torch` tensors
+Now, initialize the covariates $X$ and the response $y$ as `torch`
+tensors
 
-```R
+```{r}
 X <- ... # Insert your code here
 y <- ... # Insert your code here
 ```
 
-Using the `torch` library, initialize an `nn_module` which performs logistic regression for this dataset. (Remember that we have 6 different covariates)
+Using the `torch` library, initialize an `nn_module` which performs
+logistic regression for this dataset. (Remember that we have 6 different
+covariates)
 
-```R
+```{r}
 logistic <- nn_module(
   initialize = function() {
     self$f <- ... # Insert your code here
@@ -353,24 +370,27 @@ logistic <- nn_module(
 f <- logistic()
 ```
 
-You can verify that your code is right by checking that the output to the following code is a vector of probabilities:
+You can verify that your code is right by checking that the output to
+the following code is a vector of probabilities:
 
-```R
+```{r}
 f(X)
 ```
 
+Now, define the loss function `Loss()` which takes in two tensors `X`
+and `y` and a function `Fun`, and outputs the **Binary cross Entropy
+loss** between `Fun(X)` and `y`.
 
-Now, define the loss function `Loss()` which takes in two tensors `X` and `y` and a function `Fun`, and outputs the **Binary cross Entropy loss** between `Fun(X)` and `y`. 
-
-```R
+```{r}
 Loss <- function(X, y, Fun){
   ... # Insert our code here
 }
 ```
 
-Initialize an optimizer using `optim_adam()` and perform $n=1000$ steps of gradient descent in order to fit logistic regression using `torch`.
+Initialize an optimizer using `optim_adam()` and perform $n=1000$ steps
+of gradient descent in order to fit logistic regression using `torch`.
 
-```R
+```{r}
 f <- logistic()
 optimizer <- optim_adam(...) # Insert your code here
 
@@ -378,31 +398,29 @@ n <- 1000
 ...  # Insert your code for gradient descent here
 ```
 
-Using the final, optimized parameters of `f`, compute the compute the predicted results on `X`
+Using the final, optimized parameters of `f`, compute the compute the
+predicted results on `X`
 
-```R
+```{r}
 predicted_probabilities <- f(X) %>% as_array()
 torch_predictions <- ... # Insert your code here
 
 overview(torch_predictions, df$y)
 ```
 
----
+------------------------------------------------------------------------
 
-###### 3.6  (5 points)
+###### 3.6 (5 points)
 
-Create a summary table of the `overview()` summary statistics for each of the $4$ models we have looked at in this assignment, and comment on their relative strengths and drawbacks. 
+Create a summary table of the `overview()` summary statistics for each
+of the $4$ models we have looked at in this assignment, and comment on
+their relative strengths and drawbacks.
 
-
-:::{.hidden unless-format="pdf"}
+::: {.hidden unless-format="pdf"}
 \pagebreak
 :::
 
-<br><br><br><br>
-<br><br><br><br>
----
-
-
+<br><br><br><br> <br><br><br><br> ---
 
 ::: {.callout-note collapse="true"}
 ## Session Information
