--- a/index.qmd
+++ b/index.qmd
@@ -76,18 +76,34 @@ Define $g(x, y)$ as a function in R, compute the gradient of $g(x, y)$
 with respect to $x=3$ and $y=4$. Does the answer match what you
 expected?
 
+> $$
+> \begin{align}
+> \frac{\partial}{\partial x} g(x,y) &= 2(x-3) \\
+> \frac{\partial}{\partial y} g(x,y) &= 2(y-4)
+> \end{align}
+> $$
+>
+> To find the values of the partial derivatives at $(x=3, y=4)$, we
+> simply substitute these values into the expressions above: $$
+> \begin{align}
+> \frac{\partial}{\partial x} g(x,y) \Bigg|{(x=3,y=4)} &= 2(3-3) = 0 \\
+> \frac{\partial}{\partial y} g(x,y) \Bigg|{(x=3,y=4)} &= 2(4-4) = 0
+> \end{align}
+> $$
+
 ```{r}
 #Defining the function g(x, y)
-g <- function(x, y){
-  return((x - 3)^2 + (y - 4)^2)
+g <- function(x){
+  return((x[1] - 3)^2 + (x[2] - 4)^2)
 }
 
 #Computing the gradient of g(x, y) at x = 3 and y = 4
 library(numDeriv)
 grad_g <- grad(g, c(3, 4))
-
-cat(paste0("Gradient of g(x, y) at (3, 4): ", grad_g, "\n"))
+grad_g
 ```
+
+> Yes, the answer matches the expected answer.
 
 ------------------------------------------------------------------------
 
@@ -122,8 +138,28 @@ Define $h(\u, \v)$ as a function in R, initialize the two vectors $\u$
 and $\v$ as `torch_tensor`s. Compute the gradient of $h(\u, \v)$ with
 respect to $\u$. Does the answer match what you expected?
 
-```{r}
+> $$
+> \nabla_\u h(\u, \v) = \begin{pmatrix} \frac{\partial}{\partial u_1}h(\u, \v) \\ \frac{\partial}{\partial u_2}h(\u, \v) \\ \vdots \\ \frac{\partial}{\partial u_n}h(\u, \v) \end{pmatrix} = 3(\u \cdot \v)^2 \begin{pmatrix} v_1 \\ v_2 \\ \vdots \\ v_n \end{pmatrix} = 3(\u \cdot \v)^2 \v
+> $$
+>
+> Using the given values for $\u$ and $\v$, we have:
+>
+> $$
+> \nabla_\u h(\u, \v) = 3(-5)^2 \begin{pmatrix} -1 \\ -1 \\ -1 \\ -1 \\ -1 \\ 1 \\ 1 \\ 1 \\ 1 \\ 1 \end{pmatrix} = 3 \times 25 \begin{pmatrix} -1 \\ -1 \\ -1 \\ -1 \\ -1 \\ 1 \\ 1 \\ 1 \\ 1 \\ 1 \end{pmatrix} = -75\begin{pmatrix} 1 \\ 1 \\ 1 \\ 1 \\ 1 \\ -1 \\ -1 \\ -1 \\ -1 \\ -1 \end{pmatrix}
+> $$
 
+```{r}
+library(torch)
+u <- torch_tensor(c(-1, 1, -1, 1, -1, 1, -1, 1, -1, 1))
+v <- torch_tensor(c(-1, -1, -1, -1, -1, 1, 1, 1, 1, 1))
+
+h <- function(u, v){
+  sum((u %*% as.matrix(v))^3)
+}
+
+h_uv <- h(u, v)
+h_uv$backward()
+u$grad
 ```
 
 ------------------------------------------------------------------------
@@ -141,8 +177,31 @@ $$ and evaluate $f'(z_0)$ when $z_0 = -3.5$.
 Define $f(z)$ as a function in R, and using the `torch` library compute
 $f'(-3.5)$.
 
-```{r}
+> To find $f'(z_0)$, we simply differentiate the function \$f(z)\$ with
+> respect to \$z\$:
+>
+> $f′(z)=4z^3−12z−3$
+>
+> Therefore, we have:
+>
+> $f′(z_0)=4z_{0}^3−12z_0−3$
+>
+> Substituting $z_0 = -3.5$, we have:
+>
+> $f′(−3.5)=4(−3.5)3−12(−3.5)−3=−121$
 
+```{r}
+library(torch)
+
+f <- function(z){
+  z^4 - 6*z^2 - 3*z + 4
+}
+
+z_0 <- torch_tensor(-3.5, requires_grad = TRUE)
+
+output <- f(z_0)
+output.backward()
+z_0$grad()
 ```
 
 ------------------------------------------------------------------------
@@ -152,8 +211,7 @@ $f'(-3.5)$.
 For the same function $f$, initialize $z[1] = -3.5$, and perform $n=100$
 iterations of **gradient descent**, i.e.,
 
-> \$z\[{k+1}\] = z\[k\] - \eta f'(z\[k\])    \$ for
-> $k = 1, 2, \dots, 100$
+> $z[{k+1}] = z[k] - \eta f'(z[k])$ for $k = 1, 2, \dots, 100$
 
 Plot the curve $f$ and add taking $\eta = 0.02$, add the points
 $\{z_0, z_1, z_2, \dots z_{100}\}$ obtained using gradient descent to
@@ -338,7 +396,7 @@ and making sure that the accuracy is $100\%$ while the errors are $0\%$.
 Display an overview of the key performance metrics of `full_model`
 
 ```{r}
-summary(full_model)
+
 ```
 
 ------------------------------------------------------------------------
@@ -349,12 +407,12 @@ Using backward-stepwise logistic regression, find a parsimonious
 alternative to `full_model`, and print its `overview`
 
 ```{r}
-step_model <- step(full_model, direction = "backward", scope = formula(full_model)) 
+step_model <- step(full_model, direction = "backward") 
 summary(step_model)
 ```
 
 ```{r}
-step_predictions <- predict(step_model, type = "response")
+step_predictions <- predict(step_model, df, type = "response")
 overview(step_predictions, df$y)
 ```
 
@@ -390,7 +448,7 @@ lasso_fit <- train(
     lambda = 2^seq(-20, 0, by = 0.5)
     ),
   standardize = TRUE,
-  family = "gaussian"
+  family = "binomial"
 )
 ```
 
@@ -428,8 +486,8 @@ Now, initialize the covariates $X$ and the response $y$ as `torch`
 tensors
 
 ```{r}
-X <- torch_tensor(X, dtype = torch_float())
-y <- torch_tensor(y, dtype = torch_float())
+X <- torch_tensor(covariate_matrix, dtype = torch_float())
+y <- torch_tensor(df$y, dtype = torch_float())
 ```
 
 Using the `torch` library, initialize an `nn_module` which performs
@@ -439,11 +497,11 @@ covariates)
 ```{r}
 logistic <- nn_module(
   initialize = function() {
-    self$f <- nn_linear(1, 1)
+    self$f <- nn_linear(6, 1)
     self$g <- nn_sigmoid()
   },
   forward = function(x) {
-    x %>%
+   x %>%
       self$f() %>%
       self$g()
   }
@@ -465,7 +523,7 @@ loss** between `Fun(X)` and `y`.
 
 ```{r}
 Loss <- function(X, y, Fun){
-  y_pred <- model(x)
+  y_pred <- f(X)
   return (mean((y_pred - y)^2))
 }
 ```
@@ -475,18 +533,18 @@ of gradient descent in order to fit logistic regression using `torch`.
 
 ```{r}
 f <- logistic()
-optimizer <- optim_adam(logistic_reg_1$parameters, lr = 0.01)
+optimizer <- optim_adam(f$parameters, lr = 0.01)
 
 n <- 1000
-for ( i in 1:n){
-  loss <- L(X, y, logistic_reg_1)
+for(i in 1:n){
+  loss <- Loss(X, y, f)
   
   optimizer$zero_grad()
   loss$backward()
   optimizer$step()
   
-  if ( i %% 20 == 0){
-    cat(sprintf("Steps : %d, Loss: %.4f\n", i, loss$item()))
+  if(i %% 100 == 0){
+    cat(sprintf("Step %d, Loss = %.4f\n", i, loss))
   }
 }
 ```
@@ -496,7 +554,7 @@ predicted results on `X`
 
 ```{r}
 predicted_probabilities <- f(X) %>% as_array()
-torch_predictions <- ifelse(logistic_reg_1(X) < 0.5, 0, 1)
+torch_predictions <- ifelse(f(X) < 0.5, 0, 1)
 
 overview(torch_predictions, df$y)
 ```
@@ -508,6 +566,10 @@ overview(torch_predictions, df$y)
 Create a summary table of the `overview()` summary statistics for each
 of the $4$ models we have looked at in this assignment, and comment on
 their relative strengths and drawbacks.
+
+```{r}
+
+```
 
 ::: {.hidden unless-format="pdf"}
 \pagebreak
